feat(api): added an npm command to the start scripts for the admin and user files. Added also the expectedHours field to the taskPost function in admin.js

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "admin": "node admin.js",
+    "user": "node user.js",
+    "start": "npm run admin && npm run user"
   },
   "author": "",
   "license": "ISC",
